[gd_scene load_steps=6 format=3 uid="uid://ccvahwu4fnhhf"]

[ext_resource type="Script" path="res://durf.gd" id="1_jyp5p"]
[ext_resource type="Texture2D" uid="uid://d0lnublt7udxv" path="res://Art/DurfGame1.png" id="2_jep0v"]
[ext_resource type="Texture2D" uid="uid://bg53k1865j2tg" path="res://Art/DurfGame2.png" id="3_52fit"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1smfh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jep0v")
}, {
"duration": 1.0,
"texture": ExtResource("3_52fit")
}],
"loop": true,
"name": &"fireball",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eyhca"]
radius = 86.0
height = 172.0

[node name="Durf" type="Area2D"]
position = Vector2(282, 193)
script = ExtResource("1_jyp5p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4.99999, -6)
scale = Vector2(0.24375, 0.178125)
sprite_frames = SubResource("SpriteFrames_1smfh")
animation = &"fireball"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_eyhca")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.093
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
